Update syntax highlighter

--- a/_config.yml
+++ b/_config.yml
@@ -23,6 +23,9 @@ github_username:  robdecker
 
 # Build settings
 markdown: kramdown
+kramdown:
+  input: GFM
+  syntax_highlighter: rouge
 theme: jekyll-theme-hacker
 plugins:
   - jekyll-feed
