--- a/_config.yml
+++ b/_config.yml
@@ -17,9 +17,10 @@ title: deckerdev.com
 email: rob@deckerdev.com
 description: >- # this means to ignore newlines until "baseurl:"
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "" # the base hostname & protocol for your site, e.g. http://example.com
+url: "http://deckerdev.com" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: decker_dev
 github_username:  robdecker
+google_analytics: UA-738267-3
 
 # Build settings
 markdown: kramdown
