--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,6 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 title: deckerdev.com
-email: rob@deckerdev.com
 description: >- # this means to ignore newlines until "baseurl:"
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "http://deckerdev.com" # the base hostname & protocol for your site, e.g. http://example.com
@@ -30,6 +29,7 @@ kramdown:
 theme: jekyll-theme-hacker
 plugins:
   - jekyll-feed
+github: [metadata]
 
 # Exclude from processing.
 # The following items will not be processed, by default. Create a custom list
